--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <script src="banner.js"></script>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-   
+   <a href="lego.com">LEGO</a>
   </body>
   
 </html>
