--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 
 
   
-  <body>
+  <body>	<script src="banner.js"></script>
     
-    <script src="banner.js"></script>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-   <a href="lego.com">LEGO</a>
+<div class="body">
+    
+	<h1>Who we are</h1>
+  	<p>Libros de la Luna is a bilingual, non-profit, community-focused, used bookstore and cafe in Brighton Park, Chicago at 4591 S Archer Avenue. We are passionate about promoting literacy and community in the area. </br> We sell coffee, discounted books, and want to be a place for you and your friends/family to come and enjoy! We have plenty of seating available and hope you will stay a while!</p>
+	<img src="images/Inside_1.jpg" alt="Libros De La Luna Inside Photo">
+	<h1>What we do</h1>
+	<p> In addition to selling coffee and used books, we host <a href="events.html">events</a> as a part of our efforts to promote literacy and community. We also host weekly, joint-learning lessons in the Nahuatl language, music lessons, and are always looking to expand to new opportunities of new and interesting events and programs!
+	<img src="images/Storefront_1.jpg" alt="Libros De La Luna Inside Photo">
   </body>
+
+</div>
   
 </html>
